syntax = 'proto3';
package exporter_protocol;

option java_multiple_files = false;
option java_package = "io.zeebe.exporter.proto";

// Makes use of so called "well known types". Arguable if it's a good idea
// see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// Convenience message for systems which use a key/id system for each record
message RecordId {
    int32 partitionId = 1;
    int64 position = 2;
}

// Packs all non-value info into a single field; the idea here is so we can embed the *Record messages into other
// messages (e.g. JobRecord and JobBatchRecord) by simply omitting the optional metadata field, but by setting it the
// message becomes a full fledged record. Also cuts down how much properties need to be duplicated if we want to have
// flat records.
message RecordMetadata {
    int32 partitionId = 1;
    int64 position = 2;
    int64 key = 3;
    google.protobuf.Timestamp timestamp = 4;

    string recordType = 5;
    string intent = 6;
    string valueType = 7;
    int64 sourceRecordPosition = 8;
    int32 producerId = 9;

    string rejectionType = 10;
    string rejectionReason = 11;
}

message DeploymentRecord {
    message Resource {
        bytes resource = 1;
        string resourceType = 2;
        string resourceName = 3;
    }

    message Workflow {
        string bpmnProcessId = 1;
        int32 version = 2;
        int64 workflowKey = 3;
        string resourceName = 5;
    }

    RecordMetadata metadata = 1;
    repeated Resource resources = 2;
    repeated Workflow workflows = 3;
}

message ErrorRecord {
    RecordMetadata metadata = 1;

    string exceptionMessage = 2;
    string stacktrace = 3;
    int64 errorEventPosition = 4;
    int64 workflowInstanceKey = 5;
}

message IncidentRecord {
    RecordMetadata metadata = 1;

    string errorType = 2;
    string errorMessage = 3;
    string bpmnProcessId = 4;
    int64 workflowInstanceKey = 5;
    string elementId = 6;
    int64 elementInstanceKey = 7;
    int64 jobKey = 8;
    int64 workflowKey = 9;
}

message JobRecord {
    message Headers {
        string elementId = 1;
        int64 elementInstanceKey = 2;
        string bpmnProcessId = 3;
        int32 workflowDefinitionVersion = 4;
        int64 workflowInstanceKey = 5;
        int64 workflowKey = 6;
    }

    RecordMetadata metadata = 1;

    string type = 2;
    Headers headers = 3;
    google.protobuf.Struct customHeaders = 4;
    string worker = 5;
    int32 retries = 6;
    google.protobuf.Timestamp deadline = 7;
    string errorMessage = 8;
    google.protobuf.Struct variables = 9;
}

message JobBatchRecord {
    RecordMetadata metadata = 1;

    string type = 2;
    string worker = 3;
    int64 timeout = 4;
    int32 maxJobsToActivate = 5;
    repeated int64 jobKeys = 6;
    repeated JobRecord jobs = 7;
}

message MessageRecord {
    RecordMetadata metadata = 1;

    string name = 2;
    string correlationKey = 3;
    string messageId = 4;
    int64 timeToLive = 5;
    google.protobuf.Struct variables = 6;
}

message MessageSubscriptionRecord {
    RecordMetadata metadata = 1;

    int64 workflowInstanceKey = 2;
    int64 elementInstanceKey = 3;
    string messageName = 4;
    string correlationKey = 5;
}

message MessageStartEventSubscriptionRecord {
    RecordMetadata metadata = 1;

    int64 workflowKey = 2;
    string startEventId = 3;
    string messageName = 4;
}

message TimerRecord {
    RecordMetadata metadata = 1;

    int64 elementInstanceKey = 2;
    int64 dueDate = 3;
    string handlerFlowNodeId = 4;
    int64 workflowInstanceKey = 5;
}

message VariableRecord {
    RecordMetadata metadata = 1;

    string name = 2;
    string value = 3;
    int64 scopeKey = 4;
    int64 workflowInstanceKey = 5;
}

message VariableDocumentRecord {
    RecordMetadata metadata = 1;

    int64 scopeKey = 2;
    string updateSemantics = 3;
    google.protobuf.Struct document = 4;
}

message WorkflowInstanceRecord {
    RecordMetadata metadata = 1;

    string bpmnProcessId = 2;
    int32 version = 3;
    int64 workflowKey = 4;
    int64 workflowInstanceKey = 5;
    string elementId = 6;
    int64 flowScopeKey = 7;
}

message WorkflowInstanceCreationRecord {
		RecordMetadata metadata = 1;

		string bpmnProcessId = 2;
    int32 version = 3;
    int64 workflowKey = 4;
    int64 workflowInstanceKey = 5;    
    google.protobuf.Struct variables = 6;
}

message WorkflowInstanceSubscriptionRecord {
    RecordMetadata metadata = 1;

    int64 workflowInstanceKey = 2;
    int64 elementInstanceKey = 3;
    string messageName = 4;
    google.protobuf.Struct variables = 5;
}
